--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ video.volume = 0.01;
 </script>
 </video>
 
-<div class="text">Right click the tab and click mute to ignore the music! :)</div>
+<div class="text"></div>
 
 <div class="name">
 <div class="animated fadeInUp">
