--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
 
-<video src="filepath.mp4" autoplay poster="picture.png" loop>
+<video src="lumia.mp4" autoplay poster="lumia.jpeg" loop>
   <script>
 var video = document.currentScript.parentElement;
 video.volume = 0.01;
@@ -20,23 +20,25 @@ video.volume = 0.01;
 
 <div class="name">
 <div class="animated fadeInUp">
-<h1>YOUR NAME</h1>
+<h1>SYRIL</h1>
 </div>
 </div>
 
 <div class="info-text">
   <div class="animated 1s bounceInLeft">
 <p>
-  <a href="link goes here" target="_blank"  class="link" style="text-decoration: none;">TEXT THAT SHOWS</a><br>
-  <a href="link goes here" target="_blank"  class="link" style="text-decoration: none;">TEXT THAT SHOWS</a><br>
-  <a href="link goes here" target="_blank"  class="link" style="text-decoration: none;">TEXT THAT SHOWS</a><br>
-  <a href="link goes here" target="_blank"  class="link" style="text-decoration: none;">TEXT THAT SHOWS</a><br>
-  <a href="link goes here" target="_blank"  class="link" style="text-decoration: none;" >TEXT THAT SHOWS</a><br>
-  <a href="link goes here" target="_blank" class="link" style="text-decoration: none;">TEXT THAT SHOWS<br>
-  <a href="link goes here" target="_blank"  class="link" style="text-decoration: none;">TEXT THAT SHOWS</a><br>
-  <a href="link goes here" target="_blank"  class="link" style="text-decoration: none;">TEXT THAT SHOWS</a><br>
+  <a href="https://github.com/syrilgithub/discordpybot" target="_blank"  class="link" style="text-decoration: none;">Discord.py</a><br>
 </p>
 
+<div class ="allow-permission">
+
+<p>
+    <a <h1>grant permission through browser to see cool video and music ↑</h1></a>
+
+</p>
+
+
+</div>
 </div>
 </div>
 
